[build-system]
requires = ["flit_core>=3.4"]
build-backend = "flit_core.buildapi"

[project]
name = "pmemstat"
version = "3.0.1"
description = "Report Proportional Memory on Linux"
authors = [
    {name = "Joe Defen", email = "joedef@duck.com"},
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = ["proportional memory", "RAM", "htop", "top", "monitor"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux"
]
dependencies = [
    'psutil>5.9',
]

[project.urls]
"Homepage" = "https://github.com/joedefen/pmemstat"
"Bug Tracker" = "https://github.com/joedefen/pmemstat/issues"

[project.scripts]
pmemstat = "pmemstat.main:run"